[tool.poetry]
name = "Wireguard-Api"
version = "0.1.0"
description = "VPN node based in Wireguard with an API to get commands from master node"
authors = ["Carlos Lugones <contact@lugodev.com>", "Reinier Hernández <sasuke.reinier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.66.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
